Rewrite GraphExecutor